Update to Java 21 (#112)